# binanace-opt-fut

./: .gitignore  debug_api.py  package-lock.json  pyproject.toml  requirements.txt  setup.py
config/: config.example.yaml
docs/: ARCHITECTURE.md  CLI_COMMANDS.md  CONFIGURATION.md  DEVELOPMENT.md  ENHANCEMENT_PLAN.md  MODULES.md  PIPELINE.md  README.md  SIGNAL_GENERATION_FLOW.md  TRACKING.md  bug_found.md  bug_found_2.md  completeness_audit.md  config_refactor_plan.md  configurable_keys_from_project.md  configuration_adjustment_needed.md
scripts/: deliver_signals.py  deliver_signals.py.bak.20260515  deliver_signals.sh  html_formatter.py
src/binance_signal_generator/: __init__.py  __main__.py  cli.py  models.py
src/binance_signal_generator/analysis/: __init__.py  gamma_exposure.py  iv_analyzer.py  max_pain.py  oi_analyzer.py  pcr_analyzer.py  sentiment.py  signal_scorer.py  wall_detector.py
src/binance_signal_generator/config/: __init__.py  loader.py  validators.py
src/binance_signal_generator/data/: __init__.py  futures_fetcher.py  options_fetcher.py
src/binance_signal_generator/output/: __init__.py  database.py  json_output.py  sr_levels.py
src/binance_signal_generator/pipeline/: __init__.py  orchestrator.py
src/binance_signal_generator/ranking/: __init__.py  activity_scorer.py  asset_selector.py
src/binance_signal_generator/utils/: __init__.py  exceptions.py  helpers.py  logging.py  rate_limiter.py  test_config.py
src/binance_signal_generator/whale/: __init__.py  sr_levels.py  volume_analyzer.py  whale_detector.py
tests/unit/: test_analysis.py  test_data.py  test_pipeline.py  test_wall.py  test_whale.py
