[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binance-options-futures-signal-generator"
version = "0.1.0"
description = "Generate Binance Futures trading signals based on Binance Options data analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["binance", "options", "futures", "trading", "signals", "cryptocurrency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Binance SDKs (New Modular Structure)
    # Options Trading SDK (for /eapi/* endpoints)
    "binance-sdk-derivatives-trading-options>=1.0.0",
    # USDS-M Futures SDK (for /fapi/* endpoints - USDT-margined)
    "binance-sdk-derivatives-trading-usds-futures>=1.0.0",
    # Common Binance dependencies
    "binance-common>=1.0.0",
    # Configuration
    "pyyaml>=6.0",
    # Environment variables
    "python-dotenv>=1.0.0",
    # Async HTTP
    "aiohttp>=3.8.0",
    # Data validation
    "pydantic>=2.0",
    # Async support
    "typing-extensions>=4.0.0",
    # Logging
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    # Code quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
binance-signals = "binance_signal_generator.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/binance-options-futures-signal-generator"
Documentation = "https://github.com/your-org/binance-options-futures-signal-generator#readme"
Repository = "https://github.com/your-org/binance-options-futures-signal-generator.git"
Issues = "https://github.com/your-org/binance-options-futures-signal-generator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
binance_signal_generator = ["py.typed"]

# ============== Tool Configurations ==============

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["binance_signal_generator"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "binance.*",
    "aiohttp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["binance_signal_generator"]
branch = true
omit = [
    "tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
